test/errors/member_not_found.correct
error: member_not_found.li:3:3: Test has no member 'b'
│ x.b.c.d;
│ ~~~
│   ^
